# gene_pkgs

ros1_pkgs_gene/EtherCAT/: CMakeLists.txt  package.xml
ros1_pkgs_gene/EtherCAT/include/: Whole_EtherCAT_DC.cpp  Whole_EtherCAT_DC.h  Whole_EtherCAT_DC_2.cpp  Whole_EtherCAT_DC_2.h
ros1_pkgs_gene/EtherCAT/launch/: latest_motor_driver.launch
ros1_pkgs_gene/EtherCAT/src/: latest_motor_driver.cpp  latest_motor_driver_2.cpp  latest_motor_driver_3.cpp  motor_driver.cpp  whole_test.cpp
ros1_pkgs_gene/EtherCAT/urdf/: 250723_wholebody_4dof.urdf
ros2_pkgs_gene/joint_planner/: CMakeLists.txt  package.xml
ros2_pkgs_gene/joint_planner/config/: robot_controller.yaml  robot_controller_controlledyaw_10obs_eta11_fn8.yaml  robot_controller_controlledyaw_10obs_eta15.yaml  robot_controller_controlledyaw_10obs_eta2.yaml  robot_controller_controlledyaw_10obs_kp200_kd05.yaml  robot_controller_controlledyaw_10obs_kp30_kd05.yaml  robot_controller_controlledyaw_highpd.yaml  robot_controller_controlledyaw_highpd_10_history_obs.yaml  robot_controller_controlledyaw_highpd_10_history_obs_new.yaml  robot_controller_controlledyaw_highpd_10_history_obs_new_finetune.yaml  robot_controller_controlledyaw_highpd_10_history_obs_new_finetune_newfoot.yaml  robot_controller_controlledyaw_highpd_3_history_obs.yaml  robot_controller_controlledyaw_latest.yaml  robot_controller_controlledyaw_latest_2.yaml  robot_controller_controlledyaw_latest_kp200_kd05.yaml  robot_controller_data_collection_2.yaml
ros2_pkgs_gene/joint_planner/launch/: joint_planner.launch.py
ros2_pkgs_gene/joint_planner/motion_files/: chirp_signals_25s.csv  chirp_signals_30s.csv  eclipsoid_1.csv  eclipsoid_2.csv
ros2_pkgs_gene/joint_planner/src/: joint_planner_node.cpp
ros2_pkgs_gene/joint_planner/src/ActuatorInterface/: CMakeLists.txt  ROSActuatorInterface.cpp  ROSActuatorInterface.h
ros2_pkgs_gene/joint_planner/src/DataInterface/: CMakeLists.txt  ROSDataInterface.cpp  ROSDataInterface.h  Robot.h
ros2_pkgs_gene/joint_planner/src/EventManager/: CMakeLists.txt  EventManager.cpp  EventManager.h
ros2_pkgs_gene/joint_planner/src/FSM/: CMakeLists.txt  FSM.cpp  FSM.h
ros2_pkgs_gene/joint_planner/src/Planner/: CMakeLists.txt  Planner.cpp  Planner.h
ros2_pkgs_gene/joint_planner/src/RLPolicy/: CMakeLists.txt  README.md  RLPolicy.cpp  RLPolicy.h  RLPolicy2.cpp  RLPolicy2.h  RLPolicy_GaitObs_History.cpp  RLPolicy_GaitObs_History.h  RLPolicy_no_GaitObs.cpp  RLPolicy_no_GaitObs.h  policy.onnx  policy_gru.onnx
ros2_pkgs_gene/joint_planner/src/RLPolicy/exported_policy/: policy_77.onnx  policy_81.onnx  policy_81_3cm.onnx  policy_81_3cm_newfoot.onnx  policy_81_newfoot.onnx  policy_81cm_10obs_eta11_fn645_newfoot.onnx  policy_81cm_10obs_eta11_fn8.onnx  policy_81cm_10obs_eta15.onnx  policy_81cm_10obs_eta2.onnx  policy_81cm_10obs_kp200_kd5.onnx  policy_81cm_10obs_kp30_kd05.onnx  policy_81cm_eta11_fn545_finetune.onnx  policy_85_3cm.onnx  policy_high_f.onnx  policy_highpd.onnx  policy_highpd_finetune.onnx  policy_highpd_finetune_10_history_obs_85.onnx  policy_highpd_finetune_3_history_obs.onnx  policy_highpd_finetune_history_obs.onnx  policy_low_f.onnx  policy_lowpd.onnx
ros2_pkgs_gene/joint_planner/src/RLPolicy/exported_policy/latest/: policy_latest.onnx  policy_latest_2.onnx  policy_latest_5.onnx  policy_latest_9.onnx  policy_latest_kp200_kd5.onnx
ros2_pkgs_gene/joint_planner/src/StateMachine/: CMakeLists.txt  StateMachine.cpp  StateMachine.h  StateMachine_ControlledYaw.cpp  StateMachine_ControlledYaw_History_Obs.cpp  StateMachine_ControlledYaw_History_Obs.h  StateMachine_DataCollection.cpp  StateMachine_DataCollection2.cpp  StateMachine_JoyStick_History_Obs.cpp
ros2_pkgs_gene/launch_scripts/: CMakeLists.txt  package.xml
ros2_pkgs_gene/launch_scripts/launch/: test_all.launch.py  test_imu.launch.py  test_joint_planner.launch.py  test_joystick.launch.py  test_motor_driver.launch.py  test_ros2_xenomai_bridge.launch.py
ros2_pkgs_gene/remote_controller_cpp/: CMakeLists.txt  package.xml
ros2_pkgs_gene/remote_controller_cpp/launch/: remote_controller.launch.py
ros2_pkgs_gene/remote_controller_cpp/src/: remote_controller_node.cpp
ros2_pkgs_gene/ros2_xenomai_bridge/: CMakeLists.txt  package.xml
ros2_pkgs_gene/ros2_xenomai_bridge/launch/: ros2_xenomai_bridge.launch.py
ros2_pkgs_gene/ros2_xenomai_bridge/src/: motor_command_subscriber.cpp  motor_state_publisher.cpp
ros2_pkgs_gene/vectornav/config/: vectornav.yaml  vn_100_800hz.yaml  vn_200_800hz.yaml
ros2_pkgs_gene/vectornav/launch/: vectornav.launch.py
ros2_pkgs_gene/vectornav/src/: vn_sensor_msgs.cc  vn_sensor_msgs.hpp
